Icon visibility was fixed. Sign up and sign in pages were made adaptive

--- a/src/main/resources/static/style/elements/centred_modal_view.css
+++ b/src/main/resources/static/style/elements/centred_modal_view.css
@@ -1,10 +1,6 @@
 .centredModalView {
-    height: 50%;
-    max-height: 396px;
-    min-height: 250px;
-    width: 60%;
-    max-width: 325px;
-    min-width: 220px;
+    height: 345px;
+    width: 325px;
     display: inline-block;
     position: absolute;
     left: 50%;
@@ -15,11 +11,3 @@
     border-radius: 25px;
     z-index: 1000;
 }
-
-@media (max-width: 760px) {
-    .centredModalView {
-        height: 289px;
-    }
-}
-
-/*379px под регистрацию*/
